--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.6",
     "react-test-renderer": "^16.8.6"
   }
 }
